Issue No.878,949,985,925,1002 fixed. Test cases added where required.
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@11172 a8845c50-7012-0410-95d3-8e1449b9b1e4